--- a/RealEstateApp.WebApp/Views/User/AgentManagement.cshtml
+++ b/RealEstateApp.WebApp/Views/User/AgentManagement.cshtml
@@ -7,14 +7,10 @@
 }
 
 <div class="container">
-    <h1 class="">Usuarios</h1>
-    <a asp-controller="User" asp-action="Create" class="btn btn-primary m-3">
-        <i class="bi bi-plus-circle-fill"></i>
-        Registrar usuario
-    </a>
-    <div class="border rounded-3 card-box-shadow bg-white p-4 mt-4">
+    <h1 class="">Listado de agentes</h1>
+    <div class="border rounded-3 shadow bg-white p-4 mt-4">
         <table class="table table-hover">
-            <thead class="fw-bold fs-6">
+            <thead class="fw-bold fs-5">
                 <tr>
                     <th class="">Nombre</th>
                     <th class="">Correo</th>
@@ -34,9 +30,6 @@
                             @user.Email
                         </td>
                         <td class="py-3 truncate-text">
-                            @user.Email
-                        </td>
-                        <td class="py-3 truncate-text">
                             @user.PropertyCount
                         </td>
                         <td class="py-3 truncate-text">
@@ -45,14 +38,14 @@
                         <td class="text-end align-items-center py-3">
                             @if (!user.IsActive)
                             {
-                                <a class="btn btn-warning btn-sm" asp-controller="User" asp-action="ConfirmUserStatus" asp-route-id=@user.Id>
+                                <a class="btn btn-warning btn-sm" asp-controller="User" asp-action="ConfirmStatusChange" asp-route-id=@user.Id>
                                     <i class="bi bi-person-lines-fill"></i>
                                     Activar
                                 </a>
                             }
                             else
                             {
-                                <a class="btn btn-warning btn-sm" asp-controller="User" asp-action="ConfirmUserStatus" asp-route-id=@user.Id>
+                                <a class="btn btn-warning btn-sm" asp-controller="User" asp-action="ConfirmStatusChange" asp-route-id=@user.Id>
                                     <i class="bi bi-person-lines-fill"></i>
                                     Desactivar
                                 </a>
