--- a/RealEstateApp.WebApp/Views/User/ConfirmStatusChange.cshtml
+++ b/RealEstateApp.WebApp/Views/User/ConfirmStatusChange.cshtml
@@ -1,25 +1,29 @@
 ﻿@model RealEstateApp.Core.Application.Dtos.Account.UserResponse
 @{
-    ViewData["Title"] = "Confirmar estado";
+    ViewData["Title"] = "Confirmar cambio";
     bool isActive = Model.IsActive == true ? true : false;
 }
 
 <div class="container mt-5 w-25">
-    <div class="card card-box-shadow">
-        <div class="card-header bg-white fw-bold">
+    <div class="card border rounded-3 shadow">
+        <div class="card-header fw-bold">
             <h4>@(isActive ? $"Inactivar al usuario: {Model.UserName}" : $"Activar al usuario: {Model.UserName}")</h4>
         </div>
         <div class="card-body">
-            <form method="post" asp-controller="User" asp-action="@(isActive ? "InactiveUser":"ActiveUser")">
+            <form method="post" asp-controller="User" asp-action="ChangeUserStatus">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
                 <input type="hidden" asp-for="Id" />
+                <input type="hidden" asp-for="IsActive" />
 
                 <div class="mb-3">
                     ¿Estás seguro de que deseas realizar esta acción?
                 </div>
-                <div class="card-footer mt-2 bg-white">
-                    <button type="submit" class="btn btn-danger">Confirmar</button>
-                    <a class="btn btn-secondary" asp-action="Index">Cancelar</a>
+                <div class="border-top bg-white">
+                    <div class="mt-2">
+                        <button type="submit" class="btn btn-danger">Confirmar</button>
+                        <a class="btn btn-secondary" asp-action="AgentManagement">Cancelar</a>
+                    </div>
                 </div>
             </form>
         </div>
