Adding AuthController, HomeController and PropertyFiltersViewModel

--- a/RealEstateApp.WebApp/Views/Home/Index.cshtml
+++ b/RealEstateApp.WebApp/Views/Home/Index.cshtml
@@ -1,8 +1,110 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model List<RealEstateApp.Core.Application.ViewModels.Property.PropertyViewModel>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<div class="container-fluid">
+	<div class="row m-3">
+		<form class="d-flex" asp-controller="Home" asp-action="Index">
+			<input name="SearchString" type="search" placeholder="Search" class="form-control h-100">
+			<button type="submit" class="btn btn-dark btn-sm">Search</button>
+		</form>
+	</div>
+
+	<div class="row">
+		<div class="col-3">
+			<div class="card shadow-sm">
+				<div class="card-header bg-dark text-light">
+					<h4>Filtros</h4>
+				</div>
+				<div class="card-body">
+					<h4 class="card-title">Tipos de Propiedad</h4>
+
+					<form method="post" asp-controller="Home" asp-action="IndexFilter">
+						<div class="mb-3">
+							<div class="form-check">
+								<input class="form-check-input" value="null" type="radio" name="PropertyType" id="PropertyType-all">
+								<label class="form-check-label" for="PropertyType-all">Todas</label>
+							</div>
+						</div>
+
+						@foreach (var propertyType in ViewBag.PropetyTypes)
+						{
+							<div class="mb-3">
+								<div class="form-check">
+									<input class="form-check-input" value="@propertyType.Id" type="radio" name="PropertyType" id="propertyType-@propertyType.Id">
+									<label class="form-check-label" for="genero-@propertyType.Id">@propertyType.Name</label>
+								</div>
+							</div>
+						}
+
+						<h4>Precio</h4>
+						<div class="mb-3">
+							<label for="minPrice" class="form-label">Precio mínimo</label>
+							<input type="number" class="form-control" id="minPrice" name="MinPrice">
+						</div>
+						<div class="mb-3">
+							<label for="maxPrice" class="form-label">Precio máximo</label>
+							<input type="number" class="form-control" id="maxPrice" name="MaxPrice">
+						</div>
+
+						<h4>Cantidad de Baños</h4>
+						<div class="mb-3">
+							<label for="numberOfBathrooms" class="form-label">Cantidad de baños</label>
+							<input type="number" class="form-control" id="numberOfBathrooms" name="NumberOfBathRooms">
+						</div>
+
+						<h4>Cantidad de Habitaciones</h4>
+						<div class="mb-3">
+							<label for="numberOfRooms" class="form-label">Cantidad de habitaciones</label>
+							<input type="number" class="form-control" id="numberOfRooms" name="NumberOfRooms">
+						</div>
+
+						<button type="submit" class="btn btn-primary">Filtrar</button>
+
+					</form>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+
+			@if (Model == null || Model.Count == 0)
+			{
+				<h4>No hay propiedades</h4>
+			}
+
+			@foreach (var propiedad in Model)
+			{
+				<div class="col-4 mt-3">
+					<div class="card">
+						<div class="card">
+							<img class="card-img-top" height="200" width="200" src="@propiedad.ImagesUrl"></img>
+							<div class="card-body">
+								<h4>@propiedad.PropertyType</h4>
+								<p>Codigo</p>
+								<h4>@propiedad.Code</h4>
+								<p>@propiedad.SaleType</p>
+								<h4 style="color: red">DO$ @propiedad.Price</h4>
+								<hr>
+								<h4>
+									<i class="fa-solid fa-landmark"></i>
+									@propiedad.LandSize
+								</h4>
+								<h4>
+									<i class="fa-solid fa-bed"></i>
+									@propiedad.NumberOfRooms
+								</h4>
+								<h4>
+									<i class="fa-solid fa-bath"></i>
+									@propiedad.NumberOfBathrooms
+								</h4>
+								<div class="btn-group">
+									<a asp-action="Edit" asp-controller="Property" asp-route-id="@propiedad.Id" class="btn btn-info">Editar</a>
+									<a asp-action="Delete" asp-controller="Property" asp-route-id="@propiedad.Id" class="btn btn-danger">Eliminar</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			}
+		</div>
+	</div>
