--- a/RealEstateApp.WebApp/Views/Auth/Register.cshtml
+++ b/RealEstateApp.WebApp/Views/Auth/Register.cshtml
@@ -18,7 +18,7 @@
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
                     }
-                    <form method="post" asp-controller="User" asp-action="Register" enctype="multipart/form-data">
+                    <form method="post" asp-controller="Auth" asp-action="Register" enctype="multipart/form-data">
                         <div class="mb-3">
                             <label asp-for="FirstName" class="form-label">Nombre: </label>
                             <input asp-for="FirstName" class="form-control" />
