--- a/RealEstateApp.WebApp/Views/Home/Index.cshtml
+++ b/RealEstateApp.WebApp/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 <div class="container-fluid">
 	<div class="row m-3">
 		<form class="d-flex" asp-controller="Home" asp-action="Index">
-			<input name="SearchString" type="search" placeholder="Search" class="form-control h-100">
+			<input name="SearchString" type="search" placeholder="Buscar por codigo de propiedad" class="form-control h-100">
 			<button type="submit" class="btn btn-dark btn-sm">Search</button>
 		</form>
 	</div>
@@ -65,49 +65,51 @@
 			</div>
 		</div>
 
-		<div class="row">
+		<div class="col-9">
+			<div class="row">
+				@if (Model == null || Model.Count == 0)
+				{
+					<h4>No hay propiedades</h4>
+				}
 
-			@if (Model == null || Model.Count == 0)
-			{
-				<h4>No hay propiedades</h4>
-			}
-
-			@foreach (var propiedad in Model)
-			{
-				<div class="col-4 mt-3">
-					<div class="card">
+				@foreach (var propiedad in Model)
+				{
+					<div class="col-4 mt-3">
 						<div class="card">
-							<img class="card-img-top" height="200" width="200" src="@propiedad.ImagesUrl"></img>
-							<div class="card-body">
-								<a asp-controller="Home" asp-action="Details" asp-route-id="@propiedad.Id">
-									<h4>@propiedad.PropertyType</h4>
-								</a>
-	
-								<p>Codigo</p>
-								<h4>@propiedad.Code</h4>
-								<p>@propiedad.SaleType</p>
-								<h4 style="color: red">DO$ @propiedad.Price</h4>
-								<hr>
-								<h4>
-									<i class="fa-solid fa-landmark"></i>
-									@propiedad.LandSize
-								</h4>
-								<h4>
-									<i class="fa-solid fa-bed"></i>
-									@propiedad.NumberOfRooms
-								</h4>
-								<h4>
-									<i class="fa-solid fa-bath"></i>
-									@propiedad.NumberOfBathrooms
-								</h4>
-								<div class="btn-group">
-									<a asp-action="Edit" asp-controller="Property" asp-route-id="@propiedad.Id" class="btn btn-info">Editar</a>
-									<a asp-action="Delete" asp-controller="Property" asp-route-id="@propiedad.Id" class="btn btn-danger">Eliminar</a>
+							<div class="card">
+								<img class="card-img-top" height="200" width="200" src="@propiedad.ImagesUrl"></img>
+								<div class="card-body">
+									<a asp-controller="Home" asp-action="Details" asp-route-id="@propiedad.Id">
+										<h4>@propiedad.PropertyType</h4>
+									</a>
+
+									<p>Codigo</p>
+									<h4>@propiedad.Code</h4>
+									<p>@propiedad.SaleType</p>
+									<h4 style="color: red">DO$ @propiedad.Price</h4>
+									<hr>
+									<h4>
+										<i class="fa-solid fa-landmark"></i>
+										@propiedad.LandSize
+									</h4>
+									<h4>
+										<i class="fa-solid fa-bed"></i>
+										@propiedad.NumberOfRooms
+									</h4>
+									<h4>
+										<i class="fa-solid fa-bath"></i>
+										@propiedad.NumberOfBathrooms
+									</h4>
+									<div class="btn-group">
+										<a asp-action="Edit" asp-controller="Property" asp-route-id="@propiedad.Id" class="btn btn-info">Editar</a>
+										<a asp-action="Delete" asp-controller="Property" asp-route-id="@propiedad.Id" class="btn btn-danger">Eliminar</a>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			}
+				}
+			</div>
 		</div>
 	</div>
+</div>
