--- a/RealEstateApp.WebApp/Views/Auth/ResetPassword.cshtml
+++ b/RealEstateApp.WebApp/Views/Auth/ResetPassword.cshtml
@@ -20,7 +20,7 @@
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
                     }
-                    <form method="post" asp-controller="User" asp-action="ResetPassword">
+                    <form method="post" asp-controller="Auth" asp-action="ResetPassword">
 
                         <div class="mb-3">
                             <label asp-for="Email" class="form-label">Correo: </label>
@@ -44,7 +44,7 @@
                         <input type="hidden" asp-for="Token" />
 
                         <button type="submit" class="btn btn-primary">Guardar</button>
-                        <a asp-controller="User" asp-action="Index" class="btn btn-warning">Volver atras</a>
+                        <a asp-controller="Auth" asp-action="Index" class="btn btn-warning">Volver atras</a>
 
                     </form>
 
