--- a/RealEstateApp.WebApp/Views/Property/Index.cshtml
+++ b/RealEstateApp.WebApp/Views/Property/Index.cshtml
@@ -19,7 +19,7 @@
 			<div class="col-4 mt-3">
 				<div class="card">
 					<div class="card">
-						<img class="card-img-top" height="200" width="200" src="@propiedad.ImagesUrl"></img>
+						<img class="card-img-top" height="200" width="200" src="@propiedad.ImagesUrl.FirstOrDefault()">
 						<div class="card-body">
 							<h4>@propiedad.PropertyType</h4>
 							<p>Codigo</p>
