--- a/RealEstateApp.WebApp/Views/Property/SaveProperty.cshtml
+++ b/RealEstateApp.WebApp/Views/Property/SaveProperty.cshtml
@@ -13,6 +13,9 @@
             </div>
             <div class="card-body">
                 <form method="post" enctype="multipart/form-data">
+
+                    <input type="hidden" asp-for="Id">
+
                     <div class="form-group">
                         <label for="PropertyTypeId">Property Type</label>
                         <select class="form-control" asp-for="PropertyTypeId" asp-items="@(new SelectList(Model.PropertyTypes, "Id", "Name"))">
@@ -23,11 +26,11 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="SalesTypeId">Sale Type</label>
-                        <select class="form-control" asp-for="SalesTypeId" asp-items="@(new SelectList(Model.SalesTypes, "Id", "Name"))">
+                        <label for="SaleTypeId">Sale Type</label>
+                        <select class="form-control" asp-for="SaleTypeId" asp-items="@(new SelectList(Model.SalesTypes, "Id", "Name"))">
                             <option value="">-- Select Sale Type --</option>
                         </select>
-                        <span asp-validation-for="SalesTypeId" class="text-danger"></span>
+                        <span asp-validation-for="SaleTypeId" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
