--- a/RealEstateApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/RealEstateApp.WebApp/Views/Shared/_Layout.cshtml
@@ -89,12 +89,9 @@
                         else if (isAgent)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Property" asp-action="Index">Home</a>
+                                <a class="nav-link text-dark" asp-controller="Property" asp-action="Index">Mant. de Propiedades</a>
                             </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Agent" asp-action="Properties">Mant. de Propiedades</a>
-                            </li>
 
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Agent" asp-action="">Profile</a>
@@ -111,7 +108,7 @@
                             </li>
 
                              <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Home" asp-action="">Agents</a>
+                                <a class="nav-link text-dark" asp-controller="Home" asp-action="">Agentes</a>
                             </li>
 
                             <li class="nav-item">
