--- a/RealEstateApp.WebApp/Views/Auth/ConfirmEmail.cshtml
+++ b/RealEstateApp.WebApp/Views/Auth/ConfirmEmail.cshtml
@@ -10,7 +10,7 @@
             <div class="card-body">
 
                 <div class="alert alert-primary alert-dismissible fade show" role="alert">
-                    <h2>@Model - <a class="btn btn-primary" asp-controller="User" asp-action="Index"> Sign in</a></h2>
+                    <h2>@Model - <a class="btn btn-primary" asp-controller="Auth" asp-action="Index"> Sign in</a></h2>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
 
