--- a/RealEstateApp.WebApp/Views/Auth/ForgotPassword.cshtml
+++ b/RealEstateApp.WebApp/Views/Auth/ForgotPassword.cshtml
@@ -21,7 +21,7 @@
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
                     }
-                    <form method="post" asp-controller="User" asp-action="ForgotPassword">
+                    <form method="post" asp-controller="Auth" asp-action="ForgotPassword">
 
                         <div class="mb-3">
                             <label asp-for="Email" class="form-label">Correo: </label>
@@ -30,7 +30,7 @@
                         </div>
 
                         <button type="submit" class="btn btn-primary">Guardar</button>
-                        <a asp-controller="User" asp-action="Index" class="btn btn-warning">Volver atras</a>
+                        <a asp-controller="Auth" asp-action="Index" class="btn btn-warning">Volver atras</a>
 
                     </form>
 
