--- a/RealEstateApp.WebApp/Views/Auth/Register.cshtml
+++ b/RealEstateApp.WebApp/Views/Auth/Register.cshtml
@@ -77,7 +77,7 @@
                         </div>
 
                         <button type="submit" class="btn btn-primary">Guardar</button>
-                        <a asp-controller="User" asp-action="Index" class="btn btn-warning">Volver atras</a>
+                        <a asp-controller="Auth" asp-action="Index" class="btn btn-warning">Volver atras</a>
                     </form>
                 </div>
             </div>
