--- a/RealEstateApp.WebApp/Views/Property/Delete.cshtml
+++ b/RealEstateApp.WebApp/Views/Property/Delete.cshtml
@@ -8,7 +8,7 @@
         <div class="card-header fw-bold">
             <h4>Eliminar Propiedad</h4>
         </div>
-        <form method="post" asp-controller="PropertyType" asp-action="DeletePropType">
+        <form method="post" asp-controller="Property" asp-action="DeleteProperty">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
 
