--- a/RealEstateApp.WebApp/Views/Property/SaveProperty.cshtml
+++ b/RealEstateApp.WebApp/Views/Property/SaveProperty.cshtml
@@ -12,7 +12,7 @@
                 <h4>@(editMode ? $"Editando la propiedad" : "Registrando propiedad")</h4>
             </div>
             <div class="card-body">
-                <form method="post" enctype="multipart/form-data">
+                <form method="post" asp-controller="Property" asp-action="@(editMode? "Edit" : "Create")" enctype="multipart/form-data">
 
                     <input type="hidden" asp-for="Id">
 
@@ -72,8 +72,14 @@
 
                     <div class="form-group">
                         <label for="file1">Imagen de portada</label>
-                        <input type="file" class="form-control" name="file1" />
-                        <span asp-validation-for="file1" class="text-danger"></span>
+                        @if (editMode)
+                        {
+                            <input asp-for="file1" class="form-control" />
+                        }
+                        else
+                        {
+                            <input required asp-for="file1" class="form-control" />
+                        }
                     </div>
 
                     <div class="form-group">
