--- a/RealEstateApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/RealEstateApp.WebApp/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
 
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Agent" asp-action="">Profile</a>
+                                <a class="nav-link text-dark" asp-controller="Agent" asp-action="Profile">Profile</a>
                             </li>
 
                             <li class="nav-item">
