--- a/RealEstateApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/RealEstateApp.WebApp/Views/Shared/_Layout.cshtml
@@ -108,7 +108,7 @@
                             </li>
 
                              <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Home" asp-action="">Agentes</a>
+                                <a class="nav-link text-dark" asp-controller="Home" asp-action="Agents">Agentes</a>
                             </li>
 
                             <li class="nav-item">
