--- a/RealEstateApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/RealEstateApp.WebApp/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RealEstateApp.WebApp.styles.css" asp-append-version="true" />
-    
+
     <link rel="stylesheet" href="~/css/custom.css" asp-append-version="true" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,103 +29,103 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white box-shadow border-bottom p-2">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="" asp-action="">RealEstateApp</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" asp-area="" asp-controller="" asp-action="">RealEstate App</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class=" collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav ms-auto">
                         @if (User == null)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link mx-2 active" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Agents">Agentes</a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Register">Unete a la App</a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Index">Iniciar sesion</a>
+                                <a class="nav-link mx-2" asp-area="" asp-controller="Home" asp-action="Agents">Agentes</a>
                             </li>
                         }
                         else if (isAdmin)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Home</a>
+                                <a class="nav-link mx-2" asp-controller="Admin" asp-action="Index">Home</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="User" asp-action="AgentManagement">Listado de agentes</a>
+                                <a class="nav-link mx-2" asp-controller="User" asp-action="AgentManagement">Listado de agentes</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="User" asp-action="AdminManagement">Mant Administradores</a>
+                                <a class="nav-link mx-2" asp-controller="User" asp-action="AdminManagement">Mant Administradores</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="User" asp-action="DevManagement">Mant Desarrolladores</a>
+                                <a class="nav-link mx-2" asp-controller="User" asp-action="DevManagement">Mant Desarrolladores</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="PropertyType" asp-action="Index">Mant tipo de propiedades</a>
+                                <a class="nav-link mx-2" asp-controller="PropertyType" asp-action="Index">Mant tipo de propiedades</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="SaleType" asp-action="Index">Mant tipo de ventas</a>
+                                <a class="nav-link mx-2" asp-controller="SaleType" asp-action="Index">Mant tipo de ventas</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Improvement" asp-action="Index">Mant de mejoras</a>
+                                <a class="nav-link mx-2" asp-controller="Improvement" asp-action="Index">Mant de mejoras</a>
                             </li>
                         }
                         else if (isAgent)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Property" asp-action="Index">Mant. de Propiedades</a>
+                                <a class="nav-link mx-2" asp-controller="Property" asp-action="Index">Mant. de Propiedades</a>
                             </li>
 
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Agent" asp-action="Profile">Profile</a>
+                                <a class="nav-link mx-2" asp-controller="Agent" asp-action="Profile">Profile</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Auth" asp-action="LogOut">Cerrar session</a>
+                                <a class="nav-link mx-2" asp-controller="Auth" asp-action="LogOut">Cerrar session</a>
                             </li>
                         }
                         else if (isClient)
                         {
-                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Client" asp-action="Index">Home</a>
-                            </li>
-
-                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Home" asp-action="Agents">Agentes</a>
+                            <li class="nav-item">
+                                <a class="nav-link mx-2" asp-controller="Client" asp-action="Index">Home</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Client" asp-action="FavoriteProperties">Mis propiedades</a>
+                                <a class="nav-link mx-2" asp-controller="Home" asp-action="Agents">Agentes</a>
                             </li>
 
-                        
+                            <li class="nav-item">
+                                <a class="nav-link mx-2" asp-controller="Client" asp-action="FavoriteProperties">Mis propiedades</a>
+                            </li>
                         }
-                        
                     </ul>
-                    @if (User != null)
-                    {
-                        <a class="nav-link text-dark float-end" asp-area="" asp-controller="Auth" asp-action="LogOut">
-                            <i class="fa-solid fa-right-from-bracket"></i>
-                            Cerrar Sesion
-                        </a>
-                    }
+                    <div class="navbar-nav ms-auto d-none d-lg-inline-flex fw-bolder">
+                        @if (User == null)
+                        {
+
+                            <li class="nav-item">
+                                <a class="nav-link mx-2" asp-area="" asp-controller="Auth" asp-action="Index">
+                                    <i class="bi bi-box-arrow-in-right"></i>
+                                    Iniciar sesion
+                                </a>
+                            </li>
+                            <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" asp-controller="Auth" asp-action="Register">
+                                <span class="small">¡Únete a la APP!</span>
+                            </a>
+
+                        }else
+                        {
+                            <partial name="_LinksLogin" for="@User" />
+                        }
+                    </div>
                 </div>
             </div>
         </nav>
